Move to Gradle 1.9 and android plugin 0.7+ and fixed flagged lint errors, which should have no functionality change